[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/PrincipaisCrimes/Crimes.gd" type="Script" id=1]
[ext_resource path="res://Assets/no_texture.png" type="Texture" id=2]
[ext_resource path="res://Shaders/VHS_CRT.gdshader" type="Shader" id=3]
[ext_resource path="res://Scenes/Font/Title.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Font/Title2.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Imagens/AETERUS.png" type="Texture" id=6]
[ext_resource path="res://Assets/Music/HoliznaCC0 - Track 1.mp3" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Font/text.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Imagens/eng_social.png" type="Texture" id=9]

[sub_resource type="Animation" id=2]
resource_name = "Primeira"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Label1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Cards:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Segunda"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Cards:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1042, 0 ), Vector2( -1442, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.1
shader_param/scanlines_width = 0.25
shader_param/grille_opacity = 0.1
shader_param/resolution = Vector2( 1080, 1920 )
shader_param/pixelate = true
shader_param/roll = true
shader_param/roll_speed = -2.0
shader_param/roll_size = 20.0
shader_param/roll_variation = 1.4
shader_param/distort_intensity = 0.02
shader_param/noise_opacity = 0.4
shader_param/noise_speed = 1.0
shader_param/static_noise_intensity = 0.1
shader_param/aberration = 0.01
shader_param/brightness = 1.0
shader_param/discolor = true
shader_param/warp_amount = 0.01
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.8
shader_param/vignette_opacity = 0.25

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../write_timer")
anims/Primeira = SubResource( 2 )
anims/Segunda = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Cards" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = -1042.0
margin_right = 4958.0
margin_bottom = 4000.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Label1" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Quais os Principais 
Ataques Cibern√©ticos?"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 371.0
margin_right = -40.0
margin_bottom = -1018.0
rect_pivot_offset = Vector2( 540, 266 )
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 8 )
autowrap = true

[node name="Label3" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
margin_top = 1065.0
margin_right = -34.0
margin_bottom = -324.0
rect_pivot_offset = Vector2( 540, 266 )
custom_colors/font_color = Color( 0.705882, 1, 0, 1 )
custom_fonts/font = ExtResource( 8 )
align = 2
autowrap = true

[node name="Ending" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 249.0
margin_top = 590.0
margin_right = -249.0
margin_bottom = -590.0
alignment = 1

[node name="LOGO" type="TextureRect" parent="Ending"]
margin_right = 582.0
margin_bottom = 608.0
size_flags_vertical = 3
texture = ExtResource( 6 )
stretch_mode = 6

[node name="Label5" type="Label" parent="Ending"]
margin_top = 612.0
margin_right = 582.0
margin_bottom = 740.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 5 )
align = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="write_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="write_timer" to="." method="_on_write_timer_timeout"]
